--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
 <body>
     <h1>Matteo Iacconi</h1>
     <p>In lavorazione...</p>
+    <div class="loaderContainer">
+
+        <div class="loader"></div>
+    </div>
 </body>
 </html>
