--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 </head>
 
+<h1 id="title">Matteo Iacconi</h1>
 <body>
-    <h1>Matteo Iacconi</h1>
     <p>In lavorazione...</p>
     <div class="loaderContainer">
 
