--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 </head>
 
-<h1 id="title">Matteo Iacconi</h1>
+<h1 class="title">Matteo Iacconi</h1>
 <body>
-    <p>In lavorazione...</p>
+    <p class="title">In lavorazione...</p>
     <div class="loaderContainer">
 
         <div class="loader"></div>
