update portfolio header

--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
 </head>
 
 <body>
-    <h1 class="title">Matteo Iacconi</h1>
-    <p class="title">In lavorazione...</p>
-    <div class="loaderContainer">
+    <div class="headerContainer">
 
-        <div class="loader"></div>
+        <h1 class="titleName">matteo iacconi</h1>
+    
+        <nav class="menuNav">
+            <ul class="menuUl">
+                <li class="menuItem"><a href="#">Home</a></li>
+                <li class="menuItem"><a href="#">Progetti</a></li>
+                <li class="menuItem"><a href="#">Contatti</a></li>
+            </ul>
+        </nav>
     </div>
+    
+
+
+    <div class="presentingPortolio">
+        <p class="WelcomeP">Benvenuti nel mio portfolio, mi chiamo
+            <span class="specialP">Matteo</span>, e sono un <span class="specialP">Full-Stack Developer</>.
+        </p>
+
+        <img class="imagePhoto" src="img/io foto profilo bianco e nero.jpg" alt="foto del mio viso" title="foto del mio viso">
+
+    </div>
+
+
+
 </body>
 </html>
