addd img with text

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
 
+<!-- navbar menu -->
   <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top mx-auto">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Matteo Iacconi</a>
@@ -21,6 +22,9 @@
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
+      <div style="color: white; margin-left:20rem"> RESUME IN LAVORAZIONE </div>
+      
       <div class="collapse navbar-collapse justify-content-end" id="navbarText">
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
@@ -36,8 +40,30 @@
       </div>
     </div>
   </nav>
+  
+  
+<!-- inizio testo con immagine -->
+  <div class="container mt-5">
+    <div class="row align-items-center">
+      <div class="col-md-6 mt-md-4">
+        <p class="big-text">
+          Benvenuti nel mio portfolio, mi chiamo
+          <span class="specialP">Matteo</span>, e sono un <span class="specialP">Full-Stack Developer</span>.
+        </p>
+      </div>
 
-  <img class="imgPhoto" src="img/io foto profilo - no bg.png" alt="">
+      <div class="col-md-6 text-center">
+        <img class="imgPhoto" src="img/io foto profilo - no bg.png" alt="foto del mio viso">
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
 
 
 
