--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 
 <body>
 
-<!-- navbar menu -->
+  <!-- navbar menu -->
   <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top mx-auto">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Matteo Iacconi</a>
@@ -23,39 +24,62 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div style="color: white; margin-left:20rem"> RESUME IN LAVORAZIONE </div>
-      
       <div class="collapse navbar-collapse justify-content-end" id="navbarText">
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#aboutMe">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Projects</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  
-  
-<!-- inizio testo con immagine -->
+
+  <!-- <br><br><h1>PORTFOLIO IN LAVORAZIONE...</h1> -->
+
+  <!-- inizio testo con immagine -->
   <div class="container mt-5">
-    <div class="row align-items-center">
-      <div class="col-md-6 mt-md-4">
+    <div class="row align-items-center d-flex">
+      <div class="col-md-6 mt-md-4" data-aos="fade-right">
         <p class="big-text">
           Benvenuti nel mio portfolio, mi chiamo
           <span class="specialP">Matteo</span>, e sono un <span class="specialP">Full-Stack Developer</span>.
         </p>
+        <div>
+
+          <a href="pdf/Matteo Iacconi - CV.pdf" download="Matteo Iacconi - CV.pdf">
+            <button type="button" class="btnCustom btnCV ml-md-3 mb-sm-3" data-aos="flip-down"
+              data-aos-duration="1000">Scarica CV</button>
+          </a>
+
+          <a href="https://www.linkedin.com/in/matteo-iacconi/" target="_blank">
+            <button type="button" class="btnCustom btnContactMe" data-aos="flip-down"
+              data-aos-duration="1000">Contattami</button>
+          </a>
+        </div>
+
       </div>
 
-      <div class="col-md-6 text-center">
-        <img class="imgPhoto" src="img/io foto profilo - no bg.png" alt="foto del mio viso">
+      <div class="col-md-6 text-center" data-aos="fade-left">
+        <img class="imgPhoto" src="img/io foto profilo - no bg 2.png" alt="foto del mio viso">
       </div>
     </div>
+  </div>
+
+
+  <!-- ABOUT ME -->
+  <div class="mt-5 container" data-aos="fade-up">
+    <h2 id="aboutMe">About Me</h2>
+    <p>
+      Sono appassionato di sviluppo web in tutte le sue sfaccettature. Dalla progettazione dell'interfaccia utente allo
+      sviluppo back-end, mi piace essere coinvolto in ogni fase del processo e scoprire sempre qualcosa di nuovo. Sono
+      una persona curiosa e motivata, con un forte desiderio di apprendere e crescere continuamente nel mio percorso
+      professionale.</p>
   </div>
 
 
@@ -68,11 +92,13 @@
 
 
   <!-- SCRIPT -->
-  <script src="js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="js/script.js"></script>
+
 </body>
 </html>
