aos  (animate on scsroll) + css img

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
           Benvenuti nel mio portfolio, mi chiamo
           <span class="specialP">Matteo</span>, e sono un <span class="specialP">Full-Stack Developer</span>.
         </p>
-        <div>
 
+        <div class="button-container">
           <a href="pdf/Matteo Iacconi - CV.pdf" download="Matteo Iacconi - CV.pdf">
-            <button type="button" class="btnCustom btnCV ml-md-3 mb-sm-3" data-aos="flip-down"
+            <button type="button" class="btnCustom btnCV" data-aos="flip-down"
               data-aos-duration="1000">Scarica CV</button>
           </a>
 
@@ -73,7 +73,7 @@
 
 
   <!-- ABOUT ME -->
-  <div class="mt-5 container" data-aos="fade-up">
+  <div class="mt-5 mb-5 container" data-aos="fade-up">
     <h2 id="aboutMe">About Me</h2>
     <p>
       Sono appassionato di sviluppo web in tutte le sue sfaccettature. Dalla progettazione dell'interfaccia utente allo
