--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <!-- navbar menu -->
-  <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top mx-auto">
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Matteo Iacconi</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -46,7 +46,7 @@
   <div class="container mt-5">
     <div class="row align-items-center d-flex">
       <div class="col-md-6 mt-md-4" data-aos="fade-right">
-        <p class="big-text">
+        <p class="big-text mt-md-4">
           Benvenuti nel mio portfolio, mi chiamo
           <span class="specialP">Matteo</span>, e sono un <span class="specialP">Full-Stack Developer</span>.
         </p>
@@ -76,8 +76,8 @@
   <div class="mt-5 mb-5 container" data-aos="fade-up">
     <h2 id="aboutMe">About Me</h2>
     <p>
-      Sono appassionato di sviluppo web in tutte le sue sfaccettature. Dalla progettazione dell'interfaccia utente allo
-      sviluppo back-end, mi piace essere coinvolto in ogni fase del processo e scoprire sempre qualcosa di nuovo. Sono
+      Sono appassionato di sviluppo web in tutte le sue sfaccettature. <br> Dalla progettazione dell'interfaccia utente allo
+      sviluppo back-end, mi piace essere coinvolto in ogni fase del processo e scoprire sempre qualcosa di nuovo. <br> Sono
       una persona curiosa e motivata, con un forte desiderio di apprendere e crescere continuamente nel mio percorso
       professionale.</p>
   </div>
