--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="shortcut icon" href="img/io foto profilo - no bg 2.png" type="image/x-icon">
 </head>
 
 
@@ -79,7 +80,10 @@
       Sono appassionato di sviluppo web in tutte le sue sfaccettature. <br> Dalla progettazione dell'interfaccia utente allo
       sviluppo back-end, mi piace essere coinvolto in ogni fase del processo e scoprire sempre qualcosa di nuovo. <br> Sono
       una persona curiosa e motivata, con un forte desiderio di apprendere e crescere continuamente nel mio percorso
-      professionale.</p>
+      professionale.
+    </p>
+
+    <!-- TODO: metti che sei studente fitstic its per sviluppo web/software e iot con il suo logo -->
   </div>
 
 
