fix scroll-margin aboutMe

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#aboutMe">About Me</a>
+            <a class="nav-link" href="#abMeTitle">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#carouselProjectCaptions">Projects</a>
@@ -74,8 +74,8 @@
 
 
   <!-- ABOUT ME -->
-  <div class="mt-5 my-5 container" data-aos="fade-up">
-    <h2 id="aboutMe">About Me</h2>
+  <div class="container" id="aboutMe" data-aos="fade-up" data-aos-duration="1000">
+    <h2 id="abMeTitle">About Me</h2>
     <p>
       Sono appassionato di sviluppo web in tutte le sue sfaccettature. <br> Dalla progettazione dell'interfaccia utente allo
       sviluppo back-end, mi piace essere coinvolto in ogni fase del processo e scoprire sempre qualcosa di nuovo. <br> Sono
