fitstic logo ++ aboutme

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               data-aos-duration="1000">Contattami</button>
           </a>
         </div>
+        <small>Scarica il curriculum per saperne di più sul mio conto</small>
 
       </div>
 
@@ -82,7 +83,15 @@
       una persona curiosa e motivata, con un forte desiderio di apprendere e crescere continuamente nel mio percorso
       professionale.
     </p>
-
+    <div class="container">
+      <div class="d-flex justify-content-between align-content-center imgAboutMe">
+        <!-- <img src="img/logo fitstic/logo_fitstic_text_white-removebg-preview.png" alt="logo fitstic" title="logo fitstic"> -->
+        <img class="logoFitstic" src="img/logo fitstic/logo fitstic no bg.png" alt="logo fitstic" data-aos="fade-in" data-aos-duration="1200" title="logo fitstic">
+        <img src="img/logo fitstic/Flag_of_Europe.svg.png" alt="ue flag" data-aos="fade-in" data-aos-duration="1200" title="ue flag">
+      </div>
+      <p class="mt-5">Sono uno studente Fitstic dal 2022 al 2024 per il corso ITS Tecnico superiore per lo sviluppo
+        software con tecnologie Smart e Iot.</p>
+    </div>
     <!-- TODO: metti che sei studente fitstic its per sviluppo web/software e iot con il suo logo -->
   </div>
 
