--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <img class="logoFitstic" src="img/logo fitstic/logo fitstic no bg.png" alt="logo fitstic" data-aos="fade-in" data-aos-duration="1200" title="logo fitstic">
         <img src="img/logo fitstic/Flag_of_Europe.svg.png" alt="ue flag" data-aos="fade-in" data-aos-duration="1200" title="ue flag">
       </div>
-      <p class="mt-5">Sono uno studente Fitstic dal 2022 al 2024 per il corso ITS Tecnico superiore per lo sviluppo
+      <p class="mt-5 h2">Sono uno studente Fitstic dal 2022 al 2024 per il corso ITS Tecnico superiore per lo sviluppo
         software con tecnologie Smart e Iot.</p>
     </div>
     <!-- TODO: metti che sei studente fitstic its per sviluppo web/software e iot con il suo logo -->
@@ -99,8 +99,8 @@
 
 
 <!-- carousel projects -->
-
 <div id="carouselProjectCaptions" class="carousel slide my-5" data-bs-ride="carousel" data-aos-anchor-placement="top-center">
+  <h2 class="progettiTextTitle">Progetti</h2>
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
