--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
         <div class="button-container">
           <a href="pdf/Matteo Iacconi - CV.pdf" download="Matteo Iacconi - CV.pdf">
-            <button type="button" class="btnCustom btnCV" data-aos="flip-down"
-              data-aos-duration="1000">Scarica CV</button>
+            <button type="button" class="btnCustom btnCV" data-aos="flip-down" data-aos-duration="1000">Scarica
+              CV</button>
           </a>
 
           <a href="https://www.linkedin.com/in/matteo-iacconi/" target="_blank">
@@ -78,16 +78,20 @@
   <div class="container" id="aboutMe" data-aos="fade-up" data-aos-duration="1000">
     <h2 id="abMeTitle">About Me</h2>
     <p>
-      Sono appassionato di sviluppo web in tutte le sue sfaccettature. <br> Dalla progettazione dell'interfaccia utente allo
-      sviluppo back-end, mi piace essere coinvolto in ogni fase del processo e scoprire sempre qualcosa di nuovo. <br> Sono
+      Sono appassionato di sviluppo web in tutte le sue sfaccettature. <br> Dalla progettazione dell'interfaccia utente
+      allo
+      sviluppo back-end, mi piace essere coinvolto in ogni fase del processo e scoprire sempre qualcosa di nuovo. <br>
+      Sono
       una persona curiosa e motivata, con un forte desiderio di apprendere e crescere continuamente nel mio percorso
       professionale.
     </p>
     <div class="container">
       <div class="d-flex justify-content-between align-content-center imgAboutMe">
         <!-- <img src="img/logo fitstic/logo_fitstic_text_white-removebg-preview.png" alt="logo fitstic" title="logo fitstic"> -->
-        <img class="logoFitstic" src="img/logo fitstic/logo fitstic no bg.png" alt="logo fitstic" data-aos="fade-in" data-aos-duration="1200" title="logo fitstic">
-        <img src="img/logo fitstic/Flag_of_Europe.svg.png" alt="ue flag" data-aos="fade-in" data-aos-duration="1200" title="ue flag">
+        <img class="logoFitstic" src="img/logo fitstic/logo fitstic no bg.png" alt="logo fitstic" data-aos="fade-in"
+          data-aos-duration="1200" title="logo fitstic">
+        <img src="img/logo fitstic/Flag_of_Europe.svg.png" alt="ue flag" data-aos="fade-in" data-aos-duration="1200"
+          title="ue flag">
       </div>
       <p class="mt-5 h2">Sono uno studente Fitstic dal 2022 al 2024 per il corso ITS Tecnico superiore per lo sviluppo
         software con tecnologie Smart e Iot.</p>
@@ -98,37 +102,56 @@
 
 
 
-<!-- carousel projects -->
-<div id="carouselProjectCaptions" class="carousel slide my-5" data-bs-ride="carousel" data-aos-anchor-placement="top-center">
-  <h2 class="progettiTextTitle">Progetti</h2>
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner my-5" data-aos="fade-up" data-aos-duration="1000">
-    <div class="carousel-item active">
-      <img src="img/logo_Cosplay.png" class="d-block w-50" alt="logo gioco in C#" title="logo gioco in C#">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Videogioco Cosplay Rumble</h5>
-        <p>Realizzato in C#  - 
-          <a class="link" href="https://matteo1899.itch.io/cosplay-rumble" target="_blank">Link alla pagina</a>
-        </p>
-      </div>
+  <!-- carousel projects -->
+  <div id="carouselProjectCaptions" data-interval="2000" class="carousel slide my-5" data-bs-ride="carousel"
+    data-aos-anchor-placement="top-center">
+    <h2 class="progettiTextTitle">Progetti</h2>
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="3"
+        aria-label="Slide 4"></button>
     </div>
-    <div class="carousel-item">
-      <img src="img/portfolio.png" class="d-block w-50" alt="portfolio">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Portfolio</h5>
-        <p>HTML, CSS, JQUERY, Bootstrap, AOS</p>
+    <div class="carousel-inner my-5" data-aos="fade-up" data-aos-duration="1000">
+      <div class="carousel-item active">
+        <img src="img/logo_Cosplay.png" class="d-block" alt="logo gioco in C#" title="logo gioco in C#">
+        <div class="carousel-caption">
+          <h5>Videogioco Cosplay Rumble</h5>
+          <p>Realizzato in C# -
+            <a class="link" href="https://matteo1899.itch.io/cosplay-rumble" target="_blank">Link alla pagina</a>
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="carousel-item">
-      <img src="img/caffe no bg.png" class="d-block w-50" alt="caffe">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Sito DB caffe'</h5>
-        <p>Progetto: Sito con priorità al back-end, con DB e operazioni CRUD</p>
+      <div class="carousel-item">
+        <img src="img/portfolio.png" class="d-block" alt="portfolio">
+        <div class="carousel-caption">
+          <h5>Portfolio</h5>
+          <p>HTML, CSS, JQUERY, Bootstrap, AOS</p>
+        </div>
       </div>
+      <div class="carousel-item">
+        <img src="img/caffe no bg.png" class="d-block" alt="caffe">
+        <div class="carousel-caption">
+          <h5>Sito DB caffe'</h5>
+          <p>Progetto: Sito con priorità al back-end, con DB e operazioni CRUD</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-content">
+          <img src="img/analisi dati py.png" class="d-block mx-auto" alt="analisi dati python">
+          <div class="carousel-caption d-block">
+            <h5>Analisi dati di un DataFrame</h5>
+            <p>Progetto: Analisi dati con Python (Pandas, Matplotlib, Seaborn)
+              <a class="link" href="https://drive.google.com/file/d/1S7VjWddcABJwZVET6aPURMr-RBEPjgwh/view?usp=sharing" target="_blank">Link alla pagina</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide="prev">
@@ -139,7 +162,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
+  </div>
 
 
 
