fix logo fitstic

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container">
       <div class="d-flex justify-content-between align-content-center imgAboutMe">
         <!-- <img src="img/logo fitstic/logo_fitstic_text_white-removebg-preview.png" alt="logo fitstic" title="logo fitstic"> -->
-        <img class="logoFitstic" src="img/logo fitstic/logo fitstic no bg.png" alt="logo fitstic" data-aos="fade-in"
+        <img class="logoFitstic" src="img/logo fitstic/logo_fitstic_text_white-removebg-preview.png" alt="logo fitstic" data-aos="fade-in"
           data-aos-duration="1200" title="logo fitstic">
         <img src="img/logo fitstic/Flag_of_Europe.svg.png" alt="ue flag" data-aos="fade-in" data-aos-duration="1200"
           title="ue flag">
