--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="carousel-item">
         <img src="img/caffe no bg.png" class="d-block" alt="caffe">
         <div class="carousel-caption">
-          <h5>Sito DB caffe'</h5>
+          <h5>Sito DB caffe' con framework Python (Django)</h5>
           <p>Progetto: Sito con priorità al back-end, con DB e operazioni CRUD</p>
         </div>
       </div>
