add todo in carousel

--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
           </div>
         </div>
       </div>
+      <div class="carousel-item">
+        <div class="carousel-content">
+          <img src="img/todo-list.png" class="d-block mx-auto" alt="ToDO-List Frontend e Backend CRUD">
+          <div class="carousel-caption d-block">
+            <h5>ToDO-List Frontend e Backend CRUD</h5>
+            <p>ToDo con Angular v18 + Django (DjangoRestFramework, django-cors-headers)
+              <!-- <a class="link" href="https://drive.google.com/file/d/1S7VjWddcABJwZVET6aPURMr-RBEPjgwh/view?usp=sharing" target="_blank">Link alla pagina</a> -->
+            </p>
+          </div>
+        </div>
+      </div>
       
     </div>
   </div>
