fix carousel add todo

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
         aria-label="Slide 3"></button>
       <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="3"
         aria-label="Slide 4"></button>
+        aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselProjectCaptions" data-bs-slide-to="4"
+        aria-label="Slide 5"></button>
     </div>
     <div class="carousel-inner my-5" data-aos="fade-up" data-aos-duration="1000">
       <div class="carousel-item active">
