--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
         <img src="img/portfolio.png" class="d-block" alt="portfolio">
         <div class="carousel-caption">
           <h5>Portfolio</h5>
-          <p>HTML, CSS, JQUERY, Bootstrap, AOS</p>
+          <p>
+            HTML, CSS, JQUERY, Bootstrap, AOS
+            <a class="link" href="https://github.com/Matteo-Iacconi/matteo_iacconi-resume" target="_blank">Link alla pagina</a>
+          </p>
         </div>
       </div>
       <div class="carousel-item">
@@ -159,7 +162,7 @@
           <div class="carousel-caption d-block">
             <h5>ToDO-List Frontend e Backend CRUD</h5>
             <p>ToDo con Angular v18 + Django (DjangoRestFramework, django-cors-headers)
-              <!-- <a class="link" href="https://drive.google.com/file/d/1S7VjWddcABJwZVET6aPURMr-RBEPjgwh/view?usp=sharing" target="_blank">Link alla pagina</a> -->
+              <a class="link" href="https://github.com/Matteo-Iacconi/todo_list-angularv18-django" target="_blank">Link alla pagina</a>
             </p>
           </div>
         </div>
